implement GET /api/rooms; GET /api/guests; POST /api/guests;